# redscript

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  0-6-NOTES.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: assembler.rs  autobox.rs  codegen.rs  comb.rs  compiler.rs  cte.rs  diagnostics.rs  error.rs  lexer.rs  lib.rs  nom.rs  parser.rs  parser2.rs  scope.rs  scoped_map.rs  source_map.rs  sugar.rs  symbol.rs  transform.rs  type_repo.rs  typechecker.rs  typer.rs  unit.rs  validators.rs  visit.rs
compiler/src/codegen/: builders.rs  names.rs
compiler/src/diagnostics/: invalid_temp_use.rs  missing_return.rs  mod.rs  return_val.rs  stmt_fallthrough.rs  unused.rs  unused_local.rs
compiler/tests/: bytecode.rs  compile.rs  tests.rs  typeck.rs  utils.rs
compiler/tests/typeck/: cast.reds  closure.reds  control-flow.reds  dyn-cast.reds  function.reds  implicit-conv.reds  lub.reds
core/: Cargo.toml
core/src/: ast.rs  bundle.rs  bytecode.rs  decode.rs  decompiler.rs  definition.rs  encode.rs  error.rs  files.rs  io.rs  lib.rs  mapper.rs  mod.rs  print.rs  slab.rs
decompiler/: Cargo.toml
decompiler/src/: display.rs  error.rs  files.rs  lib.rs  lines.rs  print.rs
lib/: Predef.reds  Std.reds
lib/Std/: Collection.reds  Iter.reds  Log.reds
resources/: package.ps1  patches.reds  patches.redscript  predef.redscripts  predef.redscripts.cmp  scc.toml
resources/engine/config/cybercmd/: scc.toml
resources/mod/r6/config/cybercmd/: scc.toml
resources/r6/config/: redscript.ini
resources/r6/config/cybercmd/: scc.toml
resources/r6/scripts/: redscript.toml
scc/: Cargo.toml
scc-shared/: Cargo.toml
scc-shared/ctests/: Cargo.toml  build.rs
scc-shared/ctests/src/: lib.rs
scc-shared/ctests/tests/: tests.rs
scc-shared/include/: scc.h
scc-shared/src/: api.rs  hints.rs  lib.rs
scc-shared/tests/: compile.rs
scc/cli/: Cargo.toml
scc/cli/src/: main.rs  opts.rs
scc/lib/: Cargo.toml
scc/lib-tests/: Cargo.toml  build.rs
scc/lib-tests/tests/: tests.rs
scc/lib/include/: scc.h
scc/lib/src/: api.rs  hints.rs  lib.rs  timestamp.rs
scc/lib/tests/: compile.rs
scc/src/: actions.rs  error.rs  hints.rs  lib.rs  main.rs  opts.rs  timestamp.rs
scc/tests/: args.rs  compile.rs
src/: decode.rs  error.rs  main.rs
src/script/: ast.rs  bundle.rs  bytecode.rs  decompiler.rs  definition.rs  files.rs  mod.rs  print.rs
