[workspace]
members = ["core", "compiler", "decompiler", "cli", "scc"]
resolver = "2"

[workspace.package]
version = "0.6.0-M7"
license = "MIT"
authors = ["jekky"]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
log = "0.4"
thiserror = "1"
anyhow = "1"
derive-where = "1"
itertools = "0.11"
strum = { version = "0.25", features = ["derive"] }
smallvec = { version = "1", features = ["union", "write"] }
hashbrown = "0.14"
enum-as-inner = "0.6"
byteorder = "1"
flexstr = "0.9"
flexi_logger = { version = "0.27", default-features = false }

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-prefix = ""
shared-version = true
publish = false

[profile.release]
lto = "thin"
