[workspace]
members = ["core", "compiler", "decompiler", "cli", "scc/cli", "scc/lib", "scc/lib-tests"]
resolver = "2"

[workspace.package]
version = "0.5.17"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
log = "0.4"
thiserror = "1"
anyhow = "1"
hashbrown = "0.14"
itertools = "0.12"
strum = { version = "0.25", features = ["derive"] }
enum-as-inner = "0.6"
byteorder = "1.4"
flexstr = "0.9"
flexi_logger = { version = "0.27", default-features = false }

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-prefix = ""
shared-version = true
publish = false

[profile.release]
lto = "thin"
