[workspace]
members = ["core", "compiler", "decompiler", "cli", "scc/cli", "scc/lib", "scc/lib-tests"]
resolver = "2"

[workspace.package]
version = "0.5.18"
authors = ["jekky"]
edition = "2021"

[workspace.dependencies]
log = "0.4"
thiserror = "1"
anyhow = "1"
hashbrown = "0.14"
itertools = "0.12"
strum = { version = "0.26", features = ["derive"] }
enum-as-inner = "0.6"
byteorder = "1.4"
flexstr = "0.9"
flexi_logger = { version = "0.27", default-features = false }

[workspace.lints.rust]
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"

[workspace.lints.clippy]
all = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
single_match_else = "deny"
redundant_closure_for_method_calls = "deny"
cloned_instead_of_copied = "deny"
redundant_else = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
type_repetition_in_bounds = "deny"
equatable_if_let = "deny"
implicit_clone = "deny"
default_trait_access = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
inefficient_to_string = "deny"
match_bool = "deny"

[workspace.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-prefix = ""
shared-version = true
publish = false

[profile.release]
lto = true
codegen-units = 1
