[package]
name = "redscript-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
redscript-decompiler = { path = "../decompiler" }
redscript-compiler = { path = "../compiler" }
log.workspace = true
fern = { workspace = true, features = ["colored"] }
vmap = { version = "0.5", default-features = false }
gumdrop = "0.8"
