[package]
name = "redscript-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
log.workspace = true
thiserror.workspace = true
itertools.workspace = true
strum.workspace = true
flexstr.workspace = true
enum-as-inner.workspace = true
peg = "0.8"
hamt-sync = { git = "https://github.com/jac3km4/hamt-sync", rev = "v0.2.6"}
sequence_trie = "0.3"
walkdir = "2"
