[package]
name = "redscript-compiler"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
redscript = { path = "../core" }
log.workspace = true
thiserror.workspace = true
itertools.workspace = true
strum.workspace = true
flexstr.workspace = true
enum-as-inner.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
ahash = "0.8"
yansi = { version = "0.5", optional = true }
walkdir = "2"
typed-builder = "0.18"
indexmap = "2"
sequence_trie = { git = "https://github.com/jac3km4/rust_sequence_trie", rev = "a056b4c", features = [
    "hashbrown",
] }
simple-interner = { version = "0.3", features = ["hashbrown"] }
peg = "0.8"

[features]
pretty-errors = ["yansi"]
