[package]
name = "redscript"
version = "0.5.0"
authors = ["jac3km4 <jac3km4@pm.me>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
enum-as-inner = "0.3"
modular-bitfield = "0.11"
crc32fast = "1.3"
itertools = "0.10"
strum = { version = "0.23", features = ["derive"] }

[features]
arc = []
