[package]
name = "redscript"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
itertools.workspace = true
strum.workspace = true
enum-as-inner.workspace = true
byteorder.workspace = true
flexstr.workspace = true
modular-bitfield = "0.11"
crc32fast = "1.3"

[dev-dependencies]
rusty-hook = "0.11"

[features]
arc = []

[lints]
workspace = true
