[package]
name = "redscript-decompiler"
version = "0.4.2"
authors = ["jac3km4 <jac3km4@pm.me>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redscript = { path = "../core" }
log = "0.4"
thiserror = "1"
itertools = "0.10"

[package.metadata.release]
tag = false
