[package]
name = "redscript-decompiler"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
redscript = { path = "../core" }
log.workspace = true
thiserror.workspace = true
itertools.workspace = true
hashbrown.workspace = true
