[package]
name = "scc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
redscript = { path = "../core" }
redscript-compiler = { path = "../compiler" }
log.workspace = true
byteorder.workspace = true
thiserror.workspace = true
flexi_logger.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
vmap = { version = "0.5", default-features = false, optional = true }
fd-lock = "3"
msgbox = { version = "0.7", optional = true }
bpaf = "0.7"

[dev-dependencies]
winsplit = "0.1"
rstest = "0.17"
rstest_reuse = "0.5"
pretty_assertions = "1"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"

[features]
popup = ["msgbox"]
mmap = ["vmap"]
