[package]
name = "scc"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
redscript = { path = "../core" }
redscript-compiler = { path = "../compiler" }
log.workspace = true
byteorder.workspace = true
anyhow.workspace = true
flexi_logger.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vmap = { version = "0.5", default-features = false, optional = true }
fd-lock = "4"
msgbox = { version = "0.7", optional = true }
bpaf = "0.7"

[dev-dependencies]
winsplit = "0.1"
rstest = "0.18"
rstest_reuse = "0.6"
pretty_assertions = "1"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"

[features]
popup = ["msgbox"]
mmap = ["vmap"]
